--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="36dp"
         android:ems="10"
+        android:hint="Введите число"
         android:inputType="number"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textColor="@color/black"
@@ -91,10 +92,23 @@
         android:id="@+id/sentImageButton"
         android:layout_width="361dp"
         android:layout_height="60dp"
+        android:autofillHints="1"
         android:onClick="sendData"
         android:src="@android:drawable/ic_dialog_email"
         app:layout_constraintBottom_toTopOf="@+id/sentTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pressureEditTextNumber" />
+
+    <ListView
+        android:id="@+id/listPressureListView"
+        style="@style/TextAppearance.AppCompat.Body1"
+        android:layout_width="409dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sentTextView"
+        app:layout_constraintVertical_bias="0.502" />
 </androidx.constraintlayout.widget.ConstraintLayout>
