--- a/app/src/main/res/layout/health_data_item.xml
+++ b/app/src/main/res/layout/health_data_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     tools:ignore="MissingDefaultResource">
 
@@ -10,8 +10,8 @@
         android:id="@+id/pressureTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50sp"
-        android:layout_marginEnd="20sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="50sp"
         android:text="Header"
         android:textSize="30sp" />
 
@@ -19,7 +19,7 @@
         android:id="@+id/headAcheTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
+        android:layout_marginStart="40sp"
         android:layout_marginEnd="20sp"
         android:text="Header"
         android:textSize="30sp" />
@@ -28,7 +28,7 @@
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginStart="5sp"
         android:onClick="delete"
         android:text="Удалить" />
 
