--- a/app/src/main/res/layout/activity_list_activiy.xml
+++ b/app/src/main/res/layout/activity_list_activiy.xml
@@ -10,9 +10,8 @@
     <ListView
         android:id="@+id/listPressureListView"
         style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="406dp"
-        android:layout_height="522dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="410dp"
+        android:layout_height="337dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,44 +21,76 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="20dp"
-        android:text="Перезагрузить таблицу"
+        android:layout_marginTop="150dp"
         android:onClick="RestartTable"
+        android:text="Перезагрузить таблицу"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listPressureListView"
+        app:layout_constraintVertical_bias="0.4" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="80dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Давление"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.547" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="109dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="10dp"
+        android:text="Головная боль"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/updateDataButton"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="167dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="24dp"
+        android:onClick="updateData"
+        android:text="Редактирование таблицу"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listPressureListView" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="122dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="62dp"
-        android:text="Давление"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
-        app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="128dp"
-        android:layout_height="45dp"
+        android:id="@+id/textView4"
+        android:layout_width="70dp"
+        android:layout_height="41dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="60dp"
-        android:text="Головная боль"
-        android:textSize="20sp"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="10dp"
+        android:text="Номер строки"
+        android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
