half correct project commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/material_dynamic_primary70"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
 
     <TextView
@@ -40,26 +40,13 @@
         android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="Введите число"
-        android:inputType="number"
+        android:inputType="date"
         android:textColor="@color/black"
         android:textColorHint="@color/cardview_dark_background"
         app:layout_constraintBottom_toTopOf="@+id/sentImageButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />
-
-    <TextView
-        android:id="@+id/sentTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:text="Не отправлено"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sentImageButton" />
 
     <Button
         android:id="@+id/graphButton"
@@ -81,11 +68,12 @@
         android:id="@+id/sentImageButton"
         android:layout_width="361dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="100dp"
         android:autofillHints="1"
         android:backgroundTint="@color/purple_200"
         android:onClick="sendData"
         android:src="@android:drawable/ic_dialog_email"
-        app:layout_constraintBottom_toTopOf="@+id/sentTextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pressureEditTextNumber" />
@@ -115,7 +103,7 @@
         android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="Введите число от 1 до 10"
-        android:inputType="number"
+        android:inputType="date"
         android:textColor="@color/black"
         android:textColorHint="@color/cardview_dark_background"
         app:layout_constraintBottom_toTopOf="@+id/pressureTextView"
@@ -142,4 +130,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sentImageButton"
         app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
