--- a/app/src/main/res/layout/activity_list_activiy.xml
+++ b/app/src/main/res/layout/activity_list_activiy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/material_dynamic_primary50"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <ListView
         android:id="@+id/listPressureListView"
@@ -23,9 +23,9 @@
         android:id="@+id/textView"
         android:layout_width="80dp"
         android:layout_height="44dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="10dp"
         android:text="Давление"
         android:textSize="17sp"
@@ -39,29 +39,14 @@
         android:id="@+id/textView2"
         android:layout_width="109dp"
         android:layout_height="42dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="90dp"
+        android:layout_marginEnd="110dp"
         android:layout_marginBottom="10dp"
         android:text="Головная боль"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="70dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:text="Номер строки"
-        android:textSize="17sp"
-        app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
