--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/material_dynamic_primary50"
-    tools:context=".ScheduleActivity">
+    tools:context=".activity.ScheduleActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
