--- a/app/src/main/res/layout/dialog_adout_date.xml
+++ b/app/src/main/res/layout/dialog_adout_date.xml
@@ -18,10 +18,10 @@
 
             <TextView
                 android:id="@+id/tittle"
-                android:layout_width="270dp"
-                android:layout_height="42sp"
+                android:layout_width="279dp"
+                android:layout_height="47dp"
                 android:gravity="center"
-                android:text="Построить график "
+                android:text="Построить график"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@+id/beforeDateTextView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="text"
-                android:text="2023.12.14"
+                android:text="2023-12-14"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/afterDateTextView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,14 +86,14 @@
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="text"
+                android:text="2023-12-17"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.506"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/afterDateTextView"
-                app:layout_constraintVertical_bias="1.0"
-                android:text="2023.12.17" />
+                app:layout_constraintVertical_bias="1.0" />
 
             <Button
                 android:id="@+id/getGrahpic"
@@ -109,6 +109,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/afterDateEditText" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="187dp"
+                android:layout_height="17dp"
+                android:layout_marginStart="120dp"
+                android:layout_marginEnd="120dp"
+                android:layout_marginBottom="50dp"
+                android:text="максимум 2 месяца за 1 год"
+                app:layout_constraintBottom_toTopOf="@+id/beforeDateTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tittle" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
