--- a/app/src/main/res/layout/dialog_adout_date.xml
+++ b/app/src/main/res/layout/dialog_adout_date.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_gravity="center"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroung_graph">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
@@ -14,7 +15,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="731dp">
+            android:layout_height="match_parent"
+            android:background="@drawable/backgroung_graph">
 
             <TextView
                 android:id="@+id/tittle"
@@ -22,6 +24,7 @@
                 android:layout_height="47dp"
                 android:gravity="center"
                 android:text="Построить график"
+                android:textColor="@color/black"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@+id/beforeDateTextView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -33,13 +36,15 @@
                 android:id="@+id/beforeDateTextView"
                 android:layout_width="301dp"
                 android:layout_height="29dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="10dp"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:gravity="center"
-                android:text="От какого числа?(гггг.мм.дд)"
+                android:text="От какого числа?(гггг-мм-дд)"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/beforeDateEditText"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,10 +57,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50sp"
                 android:layout_marginEnd="50sp"
+                android:layout_marginBottom="20dp"
+                android:backgroundTint="@color/black"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="text"
                 android:text="2023-12-14"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/afterDateTextView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +76,8 @@
                 android:layout_height="32dp"
                 android:layout_marginTop="100dp"
                 android:gravity="center"
-                android:text="До какого числа?(гггг.мм.дд)"
+                android:text="До какого числа?(гггг-мм-дд)"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/afterDateEditText"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -82,11 +91,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50sp"
                 android:layout_marginEnd="50sp"
-                android:layout_marginBottom="100dp"
+                android:layout_marginBottom="250dp"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="text"
                 android:text="2023-12-17"
+                android:textColor="@color/black"
+                android:backgroundTint="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,11 +111,11 @@
                 android:layout_width="231dp"
                 android:layout_height="58dp"
                 android:layout_marginStart="93dp"
-                android:layout_marginTop="52dp"
                 android:layout_marginEnd="88dp"
-                android:layout_marginBottom="69dp"
-                android:text="Построить график"
+                android:layout_marginBottom="100dp"
                 android:onClick="getGrahpic"
+                android:text="Построить график"
+                android:background="@drawable/button_delete_user"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -112,12 +123,13 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="187dp"
-                android:layout_height="17dp"
+                android:layout_width="204dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="120dp"
                 android:layout_marginEnd="120dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="80dp"
                 android:text="максимум 2 месяца за 1 год"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toTopOf="@+id/beforeDateTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
