--- a/app/src/main/res/layout/activity_list_activiy.xml
+++ b/app/src/main/res/layout/activity_list_activiy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/material_dynamic_primary50"
+    android:background="@drawable/background_list"
     tools:context=".activity.MainActivity">
 
     <ListView
@@ -13,6 +13,7 @@
         android:layout_width="409dp"
         android:layout_height="674dp"
         android:layout_marginTop="50dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,6 +30,7 @@
         android:layout_marginBottom="10dp"
         android:text="Давление"
         android:textSize="17sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +45,7 @@
         android:layout_marginEnd="110dp"
         android:layout_marginBottom="10dp"
         android:text="Головная боль"
+        android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/listPressureListView"
         app:layout_constraintEnd_toEndOf="parent"
