--- a/app/src/main/res/layout/health_data_item.xml
+++ b/app/src/main/res/layout/health_data_item.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20sp"
         android:layout_marginEnd="20sp"
-        android:text="Header"
+        android:text="Pressure"
+        android:textColor="@color/black"
         android:textSize="30sp" />
 
     <TextView
@@ -23,6 +24,7 @@
         android:layout_marginStart="40sp"
         android:layout_marginEnd="20sp"
         android:text="Header"
+        android:textColor="@color/black"
         android:textSize="30sp" />
 
     <Button
